# ccusage-rs

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  config-schema.json
src/: main.rs
tests/: reports.rs
tests/fixtures/projects/alpha/: sess-alpha-1.jsonl  sess-alpha-2.jsonl
tests/fixtures/projects/beta/: sess-beta-1.jsonl  sess-beta-2.jsonl
