[package]
name = "ccusage-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ccusage"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.38", features = ["serde", "clock"] }
chrono-tz = "0.8.6"
clap = { version = "4.5.27", features = ["derive"] }
comfy-table = "7.1.1"
num-format = "0.4.4"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
walkdir = "2.5.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
notify = "6.1.1"
ratatui = { version = "0.27.0", default-features = false, features = ["crossterm"] }
crossterm = "0.27.0"
jsonschema = "0.17.0"
directories = "5.0.1"
ctrlc = "3.4.5"
rayon = "1.10"
colored = "2"

[dev-dependencies]
assert_cmd = "2.0.16"
serde_json = "1.0.133"
